Add basic JSON normalization and no quotes option